appId: bsky.gsheps.social
---
- launchApp:
   appId: "bsky.gsheps.social"
   clearState: true
- waitForAnimationToEnd
- tapOn: "http://localhost:8081"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Continue"
- swipe:
   from: "Bluesky"
   direction: DOWN
- tapOn:
   id: e2eProxyHeaderInput
- inputText: ${output.result}
- pressKey: Enter
- hideKeyboard
